--- a/test.html
+++ b/test.html
@@ -17,15 +17,10 @@
     <body>
         <script src="js/three.js"></script>
         <script src="node_modules\three\examples\js\controls\OrbitControls.js"></script>
-        <script src="node_modules\three\examples\js\loaders\GLTFLoader.js"></script>
+        <script src="node_modules\three\examples\js\libs\fflate.min.js"></script>
+        <script src="node_modules\three\examples\js\loaders\FBXLoader.js"></script>
         <script>
 
-            const loader = new THREE.GLTFLoader();
-            loader.load('복주머니.gltf', function(gltf) {
-
-              scene.add(gltf.scene);
-            });
-            
             var scene = new THREE.Scene();
             var camera = new THREE.PerspectiveCamera(
                 45,
@@ -33,24 +28,32 @@
                 1,
                 10000
             );
-            var renderer = new THREE.WebGLRenderer({antialias:true});
-            renderer.setClearColor(new THREE.Color(0x000000));
-            renderer.setSize(window.innerWidth, window.innerHeight);
-            renderer.setClearColor(0xffffff);
+            // instantiate a loader
+            const loader = new THREE.FBXLoader();
 
-            var spotLight = new THREE.SpotLight(0xFFFFFF);
+            // load a resource
+            loader.load('Untitled 1.fbx', object => {
+                this
+                    .scene
+                    .add(object)
+            });
+            var renderer = new THREE.WebGLRenderer({antialias: true});
+            renderer.setSize(window.innerWidth, window.innerHeight);
+            renderer.setClearColor(0xAAeeff);
+
+            var spotLight = new THREE.SpotLight(0xffffff);
             spotLight
                 .position
-                .set(0, 1500, 0);
+                .set(10, 200, 200);
             scene.add(spotLight);
 
             const controls = new THREE.OrbitControls(camera, renderer.domElement);
             controls
                 .target
-                .set(0, 150, 00);
+                .set(0, 90, 0);
             camera
                 .position
-                .set(0, 150, 100);
+                .set(300, 200, 500);
             controls.update();
             controls.rotateSpeed = -0.2; // 마우스로 카메라를 회전시킬 속도입니다. 기본값(Float)은 1입니다.
             controls.zoomSpeed = 1.2; // 마우스 휠로 카메라를 줌 시키는 속도 입니다. 기본값(Float)은 1입니다.
@@ -59,7 +62,6 @@
             controls.maxDistance = 500; // 마우스 휠로 카메라 거리 조작시 최대 값. 기본값(Float)은 무제한 입니다.
             controls.enablePan = false;
             controls.enableDamping = true;
-
 
             document
                 .body
