--- a/test.html
+++ b/test.html
@@ -33,14 +33,26 @@
             </nav>
         </div>
         <script src="js\script.js?ver=123"></script>
-
-        <div id="intro">
-            <div id="innerintro">
-                당신의 모든<br>
-                상상을 현실로.<br>
+        <div id="title">
+            <div id="intro">
+                <div id="innerintro">
+                    당신의 모든<br>
+                    상상을 현실로.<br>
+                </div>
             </div>
         </div>
-        <div id="first"></div>
+
+
+        <div id="first">
+            <div class="header">
+                <img src="img/대지 2@0.75x.png" alt="" style="width: 60px; height: 60px;">
+                <nav>
+                        <li style="display:inline">홈</li>
+                        <li style="display:inline">포트폴리오</li>
+                        <li style="display:inline">부원</li>
+                </nav>
+            </div>
+        </div>
         <script>
 
             ScrollReveal().reveal('#innerintro', {
