--- a/test.html
+++ b/test.html
@@ -26,7 +26,7 @@
     <body>
         <nav id="menu">
             <ul>
-                <li><a class="link" href="/Portfolio">홈</a></li>
+                <li><a class="link" href="Portfolio">홈</a></li>
                 <li><a class="link" href="#">포트폴리오</a></li>
                 <li><a class="link" href="#">부원</a></li>
             </ul>
