--- a/test.html
+++ b/test.html
@@ -25,9 +25,12 @@
 
     <body>
         <nav id="menu">
+            <div>
+                <img src="" alt="">
+            </div>
             <ul>
-                <li><a class="link" href="/Portfolio">홈</a></li>
-                <li><a class="link" href="#">포트폴리오</a></li>
+                <li><a class="link" href="#">홈</a></li>
+                <li><a class="link" href="Portfolio.html">포트폴리오</a></li>
                 <li><a class="link" href="#">부원</a></li>
             </ul>
         </nav>
