--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
 
     <body>
 
-        <nav class="navbar navbar-expand-sm navbar-custombg-dark fixed-top">
+        <nav
+            class="navbar navbar-expand-sm navbar-custombg-dark fixed-top"
+            id="uppernav">
             <div class="container-fluid">
                 <img src="img\대지 1@0.75x.png" alt="" style="width: 50px; height: 50px;">
                 <a
@@ -46,65 +48,158 @@
                     aria-expanded="false"
                     aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
-                    <svg width="50" height="50" viewBox="0 0 100 100">
-                        <path class="line line1" d="M 20,29.000046 H 80.000231 C 80.000231,29.000046 94.498839,28.817352 94.532987,66.711331 94.543142,77.980673 90.966081,81.670246 85.259173,81.668997 79.552261,81.667751 75.000211,74.999942 75.000211,74.999942 L 25.000021,25.000058" />
-                        <path class="line line2" d="M 20,50 H 80" />
-                        <path class="line line3" d="M 20,70.999954 H 80.000231 C 80.000231,70.999954 94.498839,71.182648 94.532987,33.288669 94.543142,22.019327 90.966081,18.329754 85.259173,18.331003 79.552261,18.332249 75.000211,25.000058 75.000211,25.000058 L 25.000021,74.999942" />
-                      </svg>
-                    </button>
-                        <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
-                            <ul class="navbar-nav  navbar-custom">
-                                <li class="navtext">
-                                    <a
-                                        class="dropdown-item navtext"
-                                        href="#"
-                                        style="color: white;font-family: 'SUIT-Heavy';">홈</a>
-                                </li>
-                                <li class="navtext">
-                                    <a
-                                        class="dropdown-item navtext"
-                                        href="Portfolio.html"
-                                        style="color: white;font-family: 'SUIT-Heavy';">포트폴리오</a>
-                                </li>
-                                <li class="navtext">
-                                    <a
-                                        class="dropdown-item navtext"
-                                        href="#"
-                                        style="color: white;font-family: 'SUIT-Heavy';">부원</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </nav>
-                <script src="js\script.js?ver=123"></script>
-                <div id="title">
-                    <div id="intro">
-                        <div id="innerintro">
-                            당신의 모든<br>
-                            상상을 현실로.<br>
-
-                        </div>
-                    </div>
+                    <svg width="50" height="50" viewbox="0 0 100 100">
+                        <path
+                            class="line line1"
+                            d="M 20,29.000046 H 80.000231 C 80.000231,29.000046 94.498839,28.817352 94.532987,66.711331 94.543142,77.980673 90.966081,81.670246 85.259173,81.668997 79.552261,81.667751 75.000211,74.999942 75.000211,74.999942 L 25.000021,25.000058"/>
+                        <path class="line line2" d="M 20,50 H 80"/>
+                        <path
+                            class="line line3"
+                            d="M 20,70.999954 H 80.000231 C 80.000231,70.999954 94.498839,71.182648 94.532987,33.288669 94.543142,22.019327 90.966081,18.329754 85.259173,18.331003 79.552261,18.332249 75.000211,25.000058 75.000211,25.000058 L 25.000021,74.999942"/>
+                    </svg>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
+                    <ul class="navbar-nav  navbar-custom">
+                        <li class="navtext">
+                            <a
+                                class="dropdown-item navtext"
+                                href="#"
+                                style="color: white;font-family: 'SUIT-Heavy';">홈</a>
+                        </li>
+                        <li class="navtext">
+                            <a
+                                class="dropdown-item navtext"
+                                href="Portfolio.html"
+                                style="color: white;font-family: 'SUIT-Heavy';">포트폴리오</a>
+                        </li>
+                        <li class="navtext">
+                            <a
+                                class="dropdown-item navtext"
+                                href="#"
+                                style="color: white;font-family: 'SUIT-Heavy';">부원</a>
+                        </li>
+                    </ul>
                 </div>
+            </div>
+        </nav>
 
-                <div id="first"></div>
-                <script>
-                    const canvas = document.querySelector('#title');
-                    canvas.onclick = function (event) {
-                        const offset = $("#first").offset();
-                        $('html, body').animate({
-                            scrollTop: offset.top
-                        }, 1000);
-                    }
-                    ScrollReveal().reveal('#innerintro', {
-                        distance: '50%',
-                        origin: 'bottom',
-                        reset: true
-                    });
-                </script>
-                <script
-                    src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-                    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-                    crossorigin="anonymous"></script>
-            </body><br>
-        </html>
+        <nav
+            class="navbar navbar-expand-sm navbar-custombg-dark fixed-top"
+            id="undernav">
+            <div class="container-fluid">
+                <img src="img\대지 2@0.75x.png" alt="" style="width: 50px; height: 50px;">
+                <a
+                    class="navbar-brand"
+                    href="#"
+                    style="color: rgb(0, 0, 0);font-family: 'SUIT-Heavy';">UNREVR</a>
+                <button
+                    class="navbutton"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavDarkDropdown"
+                    aria-controls="navbarNavDarkDropdown"
+                    aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                    <svg width="50" height="50" viewbox="0 0 100 100">
+                        <path
+                            class="line line1"
+                            d="M 20,29.000046 H 80.000231 C 80.000231,29.000046 94.498839,28.817352 94.532987,66.711331 94.543142,77.980673 90.966081,81.670246 85.259173,81.668997 79.552261,81.667751 75.000211,74.999942 75.000211,74.999942 L 25.000021,25.000058"/>
+                        <path class="line line2" d="M 20,50 H 80"/>
+                        <path
+                            class="line line3"
+                            d="M 20,70.999954 H 80.000231 C 80.000231,70.999954 94.498839,71.182648 94.532987,33.288669 94.543142,22.019327 90.966081,18.329754 85.259173,18.331003 79.552261,18.332249 75.000211,25.000058 75.000211,25.000058 L 25.000021,74.999942"/>
+                    </svg>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
+                    <ul class="navbar-nav  navbar-custom">
+                        <li class="navtext">
+                            <a
+                                class="dropdown-item navtext"
+                                href="#"
+                                style="color: rgb(0, 0, 0);font-family: 'SUIT-Heavy';">홈</a>
+                        </li>
+                        <li class="navtext">
+                            <a
+                                class="dropdown-item navtext"
+                                href="Portfolio.html"
+                                style="color: rgb(0, 0, 0);font-family: 'SUIT-Heavy';">포트폴리오</a>
+                        </li>
+                        <li class="navtext">
+                            <a
+                                class="dropdown-item navtext"
+                                href="#"
+                                style="color: rgb(0, 0, 0);font-family: 'SUIT-Heavy';">부원</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+        <script src="js\script.js?ver=123"></script>
+        <div id="title" class="section">
+            <div id="intro">
+                <div id="innerintro">
+                    당신의 모든<br>
+                    상상을 현실로.<br>
+                </div>
+            </div>
+        </div>
+
+        <div id="first" class="section">
+            <div class="innercontent">
+                <div class="text">
+                    언리버를 <br>소개합니다.<br>
+                </div>
+                
+                <div class="view">
+                    <hr style="border: solid 3px rgba(0, 0, 0, 0.637);">
+                    <div class="text">
+                        언리버는 다양한 정보 분야의 기술로 과학 컨텐츠를 제작하여 과학 대중화에 기여하는 융합과학동아리입니다. <br> <br>
+                        학기 중 부원들과 팀을 구성하여 과학과 관련된 어플리케이션, 게임 등을 제작하고 결과물을 많은 사람들에게 공유하는 것을 목표로 합니다.
+                    </div>
+                    <iframe
+                    width="560"
+                    height="315"
+                    src="https://www.youtube.com/embed/rjLjxZ-bchI?controls=0"
+                    title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen="allowfullscreen"></iframe>
+                </div>
+            </div>
+        </div>
+        <div id="second" class="section">
+            <div class="innercontent">
+
+            </div>
+        </div>
+        <script>
+            $(window).scroll(function () {
+                var up = document.getElementById("uppernav");
+                var down = document.getElementById("undernav");
+                up.style.display = "flex";
+                down.style.display = "none";
+                if ($(window).scrollTop() >= $('#first').offset().top) {
+                    up.style.display = "none";
+                    down.style.display = "flex";
+                } else {}
+            })
+
+            ScrollReveal().reveal('#innerintro', {
+                distance: '50%',
+                origin: 'bottom',
+                reset: true
+            });
+            ScrollReveal().reveal('.innercontent', {
+                distance: '50%',
+                origin: 'bottom',
+                reset: true
+            });
+        </script>
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous"></script>
+    </body><br>
+</html>
