--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <title>UNREVR</title>
         <link rel="stylesheet" href="css/style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="shortcut icon" href="img/AnyConv.com__대지 1 (2).ico">
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
             rel="stylesheet"
