그냥에두르기

--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
                         <li class="navtext">
                             <a
                                 class="dropdown-item navtext"
-                                href="Portfolio.html"
+                                href="404.html"
                                 style="color: white;font-family: 'SUIT-Heavy';">포트폴리오</a>
                         </li>
                         <li class="navtext">
                             <a
                                 class="dropdown-item navtext"
-                                href="Member.html"
+                                href="404.html"
                                 style="color: white;font-family: 'SUIT-Heavy';">부원</a>
                         </li>
                     </ul>
@@ -126,13 +126,13 @@
                         <li class="navtext">
                             <a
                                 class="dropdown-item navtext"
-                                href="Portfolio.html"
+                                href="404.html"
                                 style="color: rgb(0, 0, 0);font-family: 'SUIT-Heavy';">포트폴리오</a>
                         </li>
                         <li class="navtext">
                             <a
                                 class="dropdown-item navtext"
-                                href="Member.html"
+                                href="404.html"
                                 style="color: rgb(0, 0, 0);font-family: 'SUIT-Heavy';">부원</a>
                         </li>
                     </ul>
@@ -224,7 +224,7 @@
                                 지난 2021년, 한 해간 북과학고의 모든 과학동아리에서 진행한 프로젝트들을 선보일 수 있었던 과학동아리학술발표회,
                                 <br><br>언리버는 웹 기반 텍스트 어드밴쳐 게임 『탈출,경기북』과 C++ 단일 언어로 개발한 『다이노게임』을 비롯한 다양한 컨텐츠를 내세워
                                     학생 대상 투표 1위를 기록했습니다.
-                                <a class="a" href="/Portfolio">▶ 포트폴리오 바로가기(개발중)</a>
+                                <a class="a" href="/404">▶ 포트폴리오 바로가기(개발중)</a>
                             </div>
                         </div>
                     </div>
