--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
             <div id="third" class="section">
                 <div id="canvas" style="opacity: 10%;">
-                    <img id="sec" src="img/hardcode.png" style="width: 100vw" alt="">
+                    <img id="sec" src="img/hardcode.png" style="width: 100%" alt="">
                 </div>
                 <div class="innercontent" style="color: white;">
                     <div id="innertext">
